--- a/MvcMusicStore/packages.config
+++ b/MvcMusicStore/packages.config
@@ -35,4 +35,5 @@
   <package id="System.Spatial" version="5.2.0" targetFramework="net45" />
   <package id="WebGrease" version="1.3.0" targetFramework="net45" />
   <package id="Wrox.ProMvc3.Views.AlbumsList" version="3.0.0.1" targetFramework="net45" />
+  <package id="Wrox.ProMvc3.Views.ViewModel" version="3.0.0" targetFramework="net45" />
 </packages>
